--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Hello World! :3</h1>
         <p>This is a paragraph and I will write beautiful things in here.</p>
         <link>Clicc here, its thicc.</link>
+        <p>Now here is a new extra paragraph just for GitHub! :D</p>
     </body>
 </html>
