--- a/index.html
+++ b/index.html
@@ -6,9 +6,17 @@
         <title>My First WebPage!</title>
     </head>
     <body>
+        <!--
+            THIS IS A HTML COMMENT!!
+        -->
+        
         <h1>Hello World! :3</h1>
         <p>This is a paragraph and I will write beautiful things in here.</p>
         <link>Clicc here, its thicc.</link>
-        <p>Now here is a new extra paragraph just for GitHub! :D</p>
+        <p>Now here is a <strong><em>new extra</em></strong> paragraph just for GitHub! :D</p>
+        <h1>Here is a list of things to do:</h1>
+        <li>Make cool websites</li>
+        <li>Make people happy</li>
+        <li>Make some new experiences</li>
     </body>
 </html>
